# tslm-md

./: .env.example  .gitignore  DATASET.md  FRONTEND.md  FRONTEND_v2.md  LEARNINGS.md  Makefile  PROJECT_BRIEF.md  README.md  STACK.md  TRAINING.md  audit_data.py  audit_data_deep.py  audit_v2_channels.py  docker-compose.yml  eval_baselines.py  preprocess_misato.py  preprocess_v2.py  pyproject.toml
OpenTSLM/: .gitignore  .linkspector.yml  .python-version  REUSE.toml  curriculum_learning.py  eval_pretrained.py  requirements.txt  train_misato.py
configs/: agent.yaml  stage6_md_cot.yaml
data/: feature_stats.json  s3_data_loader.py
demo/: app.py
docs/: DATA_AND_TRAINING.md  hackathon-plan-19h.md  handoff.md  labels-strategy.md  yc-pitch-brief.md
inference-service/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  eval_cache.py  hdf5_to_pdb.py  inference.py  middleware.py  orchestrator.py  render.py  requirements.txt  verifier.py  verify_rationale.py
molemotion/: Dockerfile  README.md  package-lock.json  package.json  vite.config.ts
preprocessed/: features_test.npz  features_val.npz  metadata.json  norm_stats.json  samples_test.jsonl  samples_val.jsonl
preprocessed_v2/: metadata.json  norm_stats.json  samples_test.jsonl  samples_val.jsonl
sagemaker-deploy/: README.md  build_model_tarball.py  deploy.py  invoke_test.py
scripts/: aws_status.py  build_training_targets.py  deploy_sagemaker_endpoint.sh  download_misato_direct.sh  download_misato_subset.py  download_misato_via_ec2.sh  dry_run.py  eval_benchmark.py  fetch_kierandidi_labels.sh  (+15 more)
(+163 files in other folders)
