[project]
name = "tslm-md"
version = "0.1.0"
description = "Agentic binding-affinity copilot — first TSLM applied to molecular dynamics"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "TSLM-MD team" },
]

dependencies = [
  "torch>=2.1",
  "transformers>=4.40",
  "huggingface_hub>=0.23",
  "h5py>=3.10",
  "numpy>=1.26",
  "scipy>=1.11",
  "scikit-learn>=1.4",
  "pandas>=2.2",
  "tqdm>=4.66",
  "pyyaml>=6.0",
  "datasets>=2.18",
  "streamlit>=1.32",
  "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
  "ipykernel",
  "matplotlib",
  "pytest",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tslm_md*"]
